# BigOSearch

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  semispec.txt
include/: bigoFinder.hpp
src/: bogoFinder.cpp
tests/: maintest.cpp
